syntax = "proto3";
package tree;


message AddRequest {
    string index = 1;
    string key = 2;
    string jsonData = 3;
    string chinese = 4;
}

//正确与否回应
message BooleanResponse {
    bool result = 1;
}

message DelRequest {
    string index = 1;
    string key = 2;
    string chinese = 3;
}

message SearchRequest {
    string index = 1;
    string context = 2;
}

message SearchLenovosRequest {
    string index = 1;
    string context = 2;
}
//搜索响应体
message SearchResponse {
    repeated SearchResult ret = 1;
}

message SearchResult {
    string str = 1;
    string data = 2;
}

service SearchService {
    rpc Search (SearchRequest) returns (SearchResponse);
}

service SearchLenovosService {
    rpc SearchLenovos (SearchLenovosRequest) returns (SearchResponse);
}

service DelService {
    rpc Del (DelRequest) returns (BooleanResponse);
}

service AddService {
    rpc Add (AddRequest) returns (BooleanResponse);
}
